<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ssh" />

    <TextView
        android:id="@+id/tvLoginDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="serif"
        android:text="@string/loginDescription"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/tvLoginCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:text="@string/loginCorreo"
        android:textColor="@color/white"
        android:textSize="40dp"
        />

    <EditText
        android:id="@+id/etLoginCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="35dp"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/yellow"
        android:layout_marginBottom="70dp"
        />
    <TextView
        android:id="@+id/tvLoginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:text="@string/loginPass"
        android:textColor="@color/white"
        android:textSize="40dp"
        />

    <EditText
        android:id="@+id/dtLoginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="35dp"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/yellow"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/tvLoginOlvidoPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="serif"
        android:text="@string/olvidoPass"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp" />




</LinearLayout>