<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".OlvidoPass">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/btnOlvidoPassDevolverse"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="18dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/devolverse" />

        <ImageView
            android:id="@+id/ivImagen"
            android:layout_width="223dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ssh" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvLoginDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/tvRecuperarPass"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etUsuarioPass"
        android:layout_marginTop="24dp"
        app:hintTextColor="@color/yellow"
        android:background="@color/background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:helperTextEnabled="true"
        android:layout_marginBottom="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:inputType="textEmailAddress"
            android:maxLength="4000"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etNuevaPass"
        android:layout_marginTop="24dp"
        app:hintTextColor="@color/yellow"
        android:background="@color/background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:helperTextEnabled="true"
        android:layout_marginBottom="12dp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNuevaPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:inputType="textPassword"
            android:maxLength="4000"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etConfirmarNuevaPass"
        android:layout_marginTop="24dp"
        app:hintTextColor="@color/yellow"
        android:background="@color/background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:helperTextEnabled="true"
        android:layout_marginBottom="50dp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmarPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:inputType="textPassword"
            android:maxLength="4000"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnConfirmarPass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btnConfirmarPass" />

</LinearLayout>