<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        tools:context=".Menu">

        <ImageButton
            android:id="@+id/btnPreguntasFrecuentes"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/pregunta" />

        <ImageButton
            android:id="@+id/btnMenuDevolverse"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/devolverse" />

        <TextView
            android:id="@+id/tvMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPreguntasFrecuentes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:text="@string/tvMenu"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <ImageButton
            android:id="@+id/btnHistorialEnvios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMenu"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/historial" />

        <TextView
            android:id="@+id/tvHistorialEnvios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnHistorialEnvios"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tvHistorialEnvios"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnSolicitarMercancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHistorialEnvios"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/solicitar" />

        <TextView
            android:id="@+id/tvSolicitarMercancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSolicitarMercancia"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tvSolicitarMercancia"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnBuzonSugerencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSolicitarMercancia"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/buzon" />

        <TextView
            android:id="@+id/tvBuzonSugerencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnBuzonSugerencias"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tvBuzonSugerencias"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />



    </RelativeLayout>

</ScrollView>
